@@ -1,4 +1,4 @@
-.TH HDPARM 8 "April 2007" "Version 7.3"
+.TH HDPARM 8 "June 2007" "Version 7.4"
 
 .SH NAME
 hdparm \- get/set hard disk parameters
@@ -616,7 +616,10 @@ PIO data out security commands by Leonard den Ottolander
 Parts by Benjamin Benz <bbe@heise.de> and others.
 .SH SEE ALSO
 .B http://www.t13.org/
-Technical Committee T13 AT Attachment (ATA) Interface.
+Technical Committee T13 AT Attachment (ATA/ATAPI) Interface.
 .PP
 .B http://www.serialata.org/
 Serial ATA International Organization.
+.PP
+.B http://www.compactflash.org/
+CompactFlash Association
